# django-starter

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
core/admin/: __init__.py
core/migrations/: 0001_initial.py
dev/: format  initialize-db  initialize-env  update-requirements
project/: settings.py
project/core/migrations/: 0001_initial.py
project/core/models/: __init__.py  user.py
requirements/: base.in  dev.in  dev.txt  prod.txt
requirements/in/: base.in  dev.in  prod.in
