[project]
name = "django-starter"
version = "0.1.0"
description = "Boostrap a Django project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-extensions",
    "django-htmlmin",
    "django",
    "gunicorn",
    "psycopg[c]",
    "python-decouple",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar",
    "factory-boy",
    "ipython",
    "pytest-django",
    "pytest",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "project/core/migrations"
]
