[project]
name = "django-starter"
version = "0.2.0"
description = "Bootstrap a Django project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions",
    "django-htmlmin",
    "django",
    "gunicorn",
    "psycopg[c]",
    "python-decouple",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar",
    "factory-boy",
    "ipython",
    "pytest-django",
    "pytest",
    "django-stubs>=5.2.0",
    "django-types>=0.20.0",
    "pyright[nodejs]>=1.1.401",
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "pyproject.toml",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/migrations",
    ".venv/**",
    "venv/**",
    ".venv",
    "venv",
]
ignore = ["**/migrations", ".venv/**"]
typeCheckingMode = "basic"
reportMissingImports = "error"
reportUnusedImports = "error"
reportUnusedVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "project.settings"
